[gd_scene load_steps=6 format=2]

[ext_resource path="res://Prototype.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Script/Tagbutton.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.113725, 0.666667, 0.796078, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.556863, 0.529412, 0.113725, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 1 )

[node name="Tagbutton" type="Control"]
anchor_right = 1.0
rect_min_size = Vector2( 250, 40 )
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "A-23PT0630"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -12.0
margin_right = 65.0
margin_bottom = 12.0
text = "DELETE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="STID" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -50.0001
margin_top = -12.0
margin_right = -9.00006
margin_bottom = 12.0
hint_tooltip = "Åpne tag i STID"
text = "STID"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Echo" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -98.0
margin_top = -12.0
margin_right = -56.0
margin_bottom = 12.0
hint_tooltip = "Åpne tag i Echo 3D modell"
text = "Echo"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="STID" to="." method="_on_STID_pressed"]
[connection signal="pressed" from="Echo" to="." method="_on_Echo_pressed"]
